[package]
name = "sdsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
console = "0.15.8"
minijinja = { version = "1.0.10", features = ["loader"] }
once_cell = "1.19.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
similar = "2.4.0"
zbus = "3.14.1"
dialoguer = "0.10"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
